--- a/Proyecto/.vscode/settings.json
+++ b/Proyecto/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
         "windows.h": "c",
-        "consultanumeroempleado.h": "c"
+        "consultanumeroempleado.h": "c",
+        "consultasgenerales.h": "c",
+        "stdio.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.default.compilerPath": "C:\\MinGW\\bin\\gcc.exe"
